Alignment fixes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,11 +15,11 @@ html, body {
     top: 0;
     right: 0;
 }
-#footer {
-    visibility: hidden;
-}
 .leaflet-clickable {
     cursor: pointer;
+}
+#footer {
+    visibility: hidden;
 }
 #sidebar {
     width: 100%;
@@ -138,6 +138,12 @@ li.active a, li.active .sub {
     right: 0.8em;
     z-index: 100;
 }
+#showFooter {
+    position: absolute;
+    top: 4em;
+    right: 0.8em;
+    z-index: 100;
+}
 #hideSidebar {
     float: right;
     padding-top: 5px;
@@ -246,17 +252,17 @@ li.active a, li.active .sub {
 }
 #hexcontainerlabel {
     float: right;
-    margin-top: 2%;
-    margin-right: 1%;
     clear: left;
     color: #dadaeb;
     font-size: 1em;
+    margin-top: 40px;
+    margin-right: 10px;
 }
 #hexcontainer {
     float: right;
-    margin-top: 1%;
     clear: left;
-    margin-right: 1%;
+    margin-top: 20px;
+    margin-right: 10px;
 }
 .hexlabel {
     color: #302D3A;
@@ -348,13 +354,8 @@ li.active a, li.active .sub {
 #hex6bottom {
     border-top-color: #4a1486;
 }
-#eye {
-    color: #dadaeb;
-}
-.logo {
-    font-family: "Avenir LT W01 35 Light", Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-size: 2.5em;
-    letter-spacing: 0.02em;
-    color: #dadaeb;
+#logo {
+    width: 200px;
+    height: 80px;
+    margin-top: 10px;
 }
